methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:7: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:13: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:23: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:33: error: not found: value dogHouse
		dogHouse();		
                ^